[package]
name = "rust-acmesh"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "A small cross-platform ACME DNS-01 client inspired by acme.sh"
license = "GPL-3.0-or-later"
repository = "https://github.com/kci-lnk/acmesh-rs"
homepage = "https://github.com/kci-lnk/acmesh-rs"
readme = "README.md"
keywords = ["acme", "certificate", "dns-01", "letsencrypt", "tls"]
categories = ["command-line-utilities", "cryptography"]

[features]
default = []
pkcs12 = ["dep:p12"]

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4.5", default-features = false, features = ["derive", "std", "help", "usage"] }
hmac = "0.12"
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
p384 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
p12 = { version = "0.6", optional = true }
pem = "3"
rand = "0.8"
rcgen = { version = "0.14", features = ["pem", "x509-parser"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "form", "query", "rustls-no-provider"] }
rsa = { version = "0.9", features = ["sha2", "pem"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
sha1 = "0.10"
signature = "2"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
time = { version = "0.3", features = ["formatting"] }
x509-parser = "0.18"
url = "2"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }

[dev-dependencies]
axum = "0.8"
tokio = { version = "1", features = ["net"] }
uuid = { version = "1", features = ["v4"] }
